--- a/CPW212TicketingSystem/CPW212TicketingSystem.csproj
+++ b/CPW212TicketingSystem/CPW212TicketingSystem.csproj
@@ -100,6 +100,10 @@
     <Compile Include="Migrations\201802142046248_RolePriorityLevelUnique.Designer.cs">
       <DependentUpon>201802142046248_RolePriorityLevelUnique.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803062130545_partialSeed.cs" />
+    <Compile Include="Migrations\201803062130545_partialSeed.Designer.cs">
+      <DependentUpon>201803062130545_partialSeed.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Classes\Priority.cs" />
     <Compile Include="Program.cs" />
@@ -132,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802142046248_RolePriorityLevelUnique.resx">
       <DependentUpon>201802142046248_RolePriorityLevelUnique.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803062130545_partialSeed.resx">
+      <DependentUpon>201803062130545_partialSeed.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
